# play-substrate

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
docs/: pallets.md
pallets/balances/: Cargo.toml  expand.rs
pallets/balances/src/: impl_account.rs  impl_data_type.rs  impl_offchain_index.rs  impl_system_usage.rs  lib.rs  migrations.rs  mock.rs  tests.rs
pallets/balances/src/tests/: basic.rs  map_test.rs  mod.rs  pallet_info.rs  sp_io_test.rs
pallets/club/: Cargo.toml
pallets/club/src/: lib.rs  weights.rs
pallets/connect-four/: Cargo.toml
pallets/connect-four/src/: lib.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/offchain-worker/: Cargo.toml
pallets/offchain-worker/src/: lib.rs  tests.rs
pallets/phantom-pallet/: Cargo.toml
pallets/phantom-pallet/src/: lib.rs
para/node/: Cargo.toml
para/pallets/template/src/: lib.rs
para/runtime/: Cargo.toml
scripts/: launch-binary.sh  register-parachain.ts  run_chrome_tab.sh  start-para.sh
scripts/tmux/: para.yaml
solo/node/: Cargo.toml
solo/pallets/kitties/src/: tests.rs
solo/pallets/template/: Cargo.toml
solo/pallets/template/src/: lib.rs
solo/runtime/: Cargo.toml
solo/runtime/src/: lib.rs
