[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'Substrate FRAME pallet template for defining custom runtime logic.'
edition = '2021'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'play-balances'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '0.0.1'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

[dev-dependencies]
sp-core = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }



[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'scale-info/std',
]
try-runtime = ['frame-support/try-runtime']

