[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'Substrate FRAME pallet template for defining custom runtime logic.'
edition = '2021'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'play-balances'
publish = false
version = '0.0.1'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = [
    "derive",
] }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-core = { default-featlures = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }


[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'scale-info/std',
    'pallet-balances/std',
    'sp-std/std',
    'sp-core/std',
]
try-runtime = ['frame-support/try-runtime']
