[package]
name = "pallet-connect-four"
version = "0.1.0"
description = "connect four game pallet."
authors = ["Junius Zhou <https://github.com/juniuszhou>"]
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/juniuszhou/connect-four/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]