[package]
name = "pallet-offchain-worker"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME example pallet for offchain worker"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
lite-json = { version = "0.1", default-features = false }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# substrate 
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-keystore = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"lite-json/std",
	"log/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
