[package]
name = 'node-template'
version = '4.0.0-dev'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.io/'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
build = 'build.rs'

[[bin]]
name = 'node-template'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
branch = "polkadot-v0.9.29"
version = '3.0.0'

[dependencies.node-template-runtime]
path = '../runtime'
version = '6.0.0'

[dependencies]
jsonrpc-core = '18.0.0'
structopt = '0.3.8'

sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", features = ["wasmtime"] }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", features = ["wasmtime"]  }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", features = ["wasmtime"]  }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }

# These dependencies are used for the node template's RPCs

sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", default-features= false, branch = "polkadot-v0.9.29" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", default-features= false, branch = "polkadot-v0.9.29" }
node-primitives = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }

# frame dependencies
pallet-im-online = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
